--- a/BertScout2022/BertScout2022/BertScout2022.csproj
+++ b/BertScout2022/BertScout2022/BertScout2022.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BertScout2022.Data\BertScout2022.Data.csproj" />
+    <ProjectReference Include="..\BertScout2022.Env\BertScout2022.Env.csproj" />
+  </ItemGroup>
 </Project>
