--- a/BertScout2022/BertScout2022.UWP/BertScout2022.UWP.csproj
+++ b/BertScout2022/BertScout2022.UWP/BertScout2022.UWP.csproj
@@ -154,6 +154,11 @@
       <Name>BertScout2022</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
