--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,9 @@
 
 # IDE0058: Expression value is never used
 dotnet_diagnostic.IDE0058.severity = none
+
+# IDE0047: Remove unnecessary parentheses
+dotnet_diagnostic.IDE0047.severity = none
+
+# IDE0011: Add braces
+dotnet_diagnostic.IDE0011.severity = none
