--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,6 @@ dotnet_diagnostic.IDE0011.severity = none
 
 # IDE0045: Convert to conditional expression
 dotnet_diagnostic.IDE0045.severity = none
+
+# IDE0130: Namespace does not match folder structure
+dotnet_diagnostic.IDE0130.severity = none
